<resources>
    <string name="app_name">firs_best_design</string>
    <string name="Enter_Username">Enter Username</string>
    <string name="Paassword">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="about_me">About Me</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="hello">Hello!</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="open_nav">Navigation open drawer</string>
    <string name="close_nav">Navigation closedrawer</string>
    <string name="toolbar_text">Wherever Together </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="private_Requests">Private Resquests</string>
    <string name="Logout">Logout</string>
</resources>
